--- a/src/main/resources/templates/admin/answers.html
+++ b/src/main/resources/templates/admin/answers.html
@@ -61,6 +61,8 @@
 						<p class="label label-danger"
 							th:if="${#fields.hasErrors('valid')}" th:errors="*{valid}">Valid
 							Error</p>
+					</div>
+					<div>
 						<button type="submit" class="btn btn-primary" th:text="#{submit}"></button>
 					</div>
 				</div>
