--- a/src/main/resources/templates/admin/questions.html
+++ b/src/main/resources/templates/admin/questions.html
@@ -65,6 +65,8 @@
 							th:if="${#fields.hasErrors('validAnswersCount')}"
 							th:errors="*{validAnswersCount}">Valid answers count Error</p>
 					</div>
+				</div>
+				<div>
 					<button type="submit" class="btn btn-primary" th:text="#{submit}"></button>
 				</div>
 			</form>
