--- a/src/main/resources/templates/admin/lectures.html
+++ b/src/main/resources/templates/admin/lectures.html
@@ -69,6 +69,8 @@
 						<p class="label label-danger"
 							th:if="${#fields.hasErrors('value')}" th:errors="*{value}">Value
 							Error</p>
+					</div>
+					<div>
 						<button type="submit" class="btn btn-primary"
 							th:if="${isUserHasAccess}" th:text="#{submit}"></button>
 					</div>
