--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,13 +9,11 @@
 <body>
 	<div layout:fragment="content">
 		<h1 th:text="#{welcome}"></h1>
-		<h3>
-			<a th:if="${isAdminOrTutor}" th:href="@{/quest/add}"
-				th:text="#{create_or_update_quests}"></a>
+		<h3 th:sec:authorize="hasRole('ROLE_ADMIN') or hasRole('ROLE_TUTOR')">
+			<a th:href="@{/quest/add}" th:text="#{create_or_update_quests}"></a>
 		</h3>
-		<h3>
-			<a th:if="${isAdminOrTutor}" th:href="@{/lecture/add}"
-				th:text="#{create_or_update_lectures}"></a>
+		<h3 th:sec:authorize="hasRole('ROLE_ADMIN') or hasRole('ROLE_TUTOR')">
+			<a th:href="@{/lecture/add}" th:text="#{create_or_update_lectures}"></a>
 		</h3>
 	</div>
 </body>
