--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -16,11 +16,11 @@
 						class="icon-bar"></span> <span class="icon-bar"></span> <span
 						class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" th:href="@{/}" href="/">JTutor <span
-					class="glyphicon glyphicon-home"></span></a>
+				<a class="navbar-brand" th:href="@{/}" href="/">JTutor</a>
 			</div>
 			<div class="navbar-collapse collapse">
-				<ul class="nav navbar-nav navbar">
+				<ul th:sec:authorize="isAuthenticated()"
+					class="nav navbar-nav navbar">
 					<li><a th:href="@{/quiz/quests}" href="/quiz/quests"
 						th:text="#{quests}"></a></li>
 					<li><a th:href="@{/tutorial/lectures}"
@@ -42,18 +42,22 @@
 						data-toggle="dropdown" href="#"><span
 							class="glyphicon glyphicon-user"></span><span class="caret"></span></a>
 						<ul class="dropdown-menu">
-							<li><a th:href="@{/user/list}" href="user/list"
-								th:text="#{user_list}"></a></li>
-							<li><a th:href="@{/quiz/results}" href="quiz/results"
+							<li th:sec:authorize="isAuthenticated()"><a
+								th:href="@{/user/list}" href="user/list" th:text="#{user_list}"></a></li>
+							<li th:sec:authorize="isAuthenticated()"><a
+								th:href="@{/quiz/results}" href="quiz/results"
 								th:text="#{my_results}"></a></li>
-							<li><a th:href="@{/user/edit/0}" href="user/list"
+							<li th:sec:authorize="isAuthenticated()"><a
+								th:href="@{/user/edit/0}" href="user/list"
 								th:text="#{edit_user}"></a></li>
-							<li><a th:href="@{/user/reset-password}" href="reset"
+							<li th:sec:authorize="isAuthenticated()"><a
+								th:href="@{/user/reset-password}" href="reset"
 								th:text="#{reset_password}"></a></li>
 							<li><a th:href="@{/user/register}" href="register"
 								th:text="#{register}"></a></li>
 						</ul></li>
-					<li><a th:href="@{/logout}" href="logout"><i
+					<li th:sec:authorize="isAuthenticated()"><a
+						th:href="@{/logout}" href="logout"><i
 							class="icon-chevron-left"></i><span
 							class="glyphicon glyphicon-log-out"></span></a></li>
 				</ul>
