--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-	xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout">
+	xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
+	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head>
 <meta charset="UTF-8" />
 <title>JTutor</title>
@@ -19,8 +20,7 @@
 				<a class="navbar-brand" th:href="@{/}" href="/">JTutor</a>
 			</div>
 			<div class="navbar-collapse collapse">
-				<ul th:sec:authorize="isAuthenticated()"
-					class="nav navbar-nav navbar">
+				<ul sec:authorize="isAuthenticated()" class="nav navbar-nav navbar">
 					<li><a th:href="@{/quiz/quests}" href="/quiz/quests"
 						th:text="#{quests}"></a></li>
 					<li><a th:href="@{/tutorial/lectures}"
@@ -42,23 +42,23 @@
 						data-toggle="dropdown" href="#"><span
 							class="glyphicon glyphicon-user"></span><span class="caret"></span></a>
 						<ul class="dropdown-menu">
-							<li th:sec:authorize="isAuthenticated()"><a
+							<li sec:authorize="isAuthenticated()"><a
 								th:href="@{/user/list}" href="user/list" th:text="#{user_list}"></a></li>
-							<li th:sec:authorize="isAuthenticated()"><a
+							<li sec:authorize="isAuthenticated()"><a
 								th:href="@{/quiz/results}" href="quiz/results"
 								th:text="#{my_results}"></a></li>
-							<li th:sec:authorize="isAuthenticated()"><a
+							<li sec:authorize="isAuthenticated()"><a
 								th:href="@{/user/edit/0}" href="user/list"
 								th:text="#{edit_user}"></a></li>
-							<li th:sec:authorize="isAuthenticated()"><a
+							<li sec:authorize="isAuthenticated()"><a
 								th:href="@{/user/reset-password}" href="reset"
 								th:text="#{reset_password}"></a></li>
-							<li><a th:href="@{/user/register}" href="register"
+							<li sec:authorize="isAnonymous()"><a
+								th:href="@{/user/register}" href="register"
 								th:text="#{register}"></a></li>
 						</ul></li>
-					<li th:sec:authorize="isAuthenticated()"><a
-						th:href="@{/logout}" href="logout"><i
-							class="icon-chevron-left"></i><span
+					<li sec:authorize="isAuthenticated()"><a th:href="@{/logout}"
+						href="logout"><i class="icon-chevron-left"></i><span
 							class="glyphicon glyphicon-log-out"></span></a></li>
 				</ul>
 			</div>
