--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -10,12 +10,14 @@
 <body>
 	<div layout:fragment="content">
 		<h1 th:text="#{welcome}"></h1>
-		<h3 sec:authorize="hasRole('ROLE_ADMIN') or hasRole('ROLE_TUTOR')">
-			<a th:href="@{/quest/add}" th:text="#{create_or_update_quests}"></a>
-		</h3>
-		<h3 sec:authorize="hasRole('ROLE_ADMIN') or hasRole('ROLE_TUTOR')">
-			<a th:href="@{/lecture/add}" th:text="#{create_or_update_lectures}"></a>
-		</h3>
+		<sec:authorize access="hasRole('ROLE_ADMIN') or hasRole('ROLE_TUTOR')">
+			<h3>
+				<a th:href="@{/quest/add}" th:text="#{create_or_update_quests}"></a>
+			</h3>
+			<h3>
+				<a th:href="@{/lecture/add}" th:text="#{create_or_update_lectures}"></a>
+			</h3>
+		</sec:authorize>
 	</div>
 </body>
 </html>
