--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -10,7 +10,7 @@
 <body>
 	<div layout:fragment="content">
 		<h1 th:text="#{welcome}"></h1>
-		<sec:authorize access="hasRole('ROLE_ADMIN') or hasRole('ROLE_TUTOR')">
+		<sec:authorize access="hasRole('ROLE_ADMIN')">
 			<h3>
 				<a th:href="@{/quest/add}" th:text="#{create_or_update_quests}"></a>
 			</h3>
