--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
-	xmlns:sec="http://www.springframework.org/security/tags"
+	xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
 	layout:decorator="layout">
 <head>
 <meta charset="UTF-8" />
@@ -10,14 +10,12 @@
 <body>
 	<div layout:fragment="content">
 		<h1 th:text="#{welcome}"></h1>
-		<sec:authorize access="hasRole('ROLE_ADMIN')">
-			<h3>
-				<a th:href="@{/quest/add}" th:text="#{create_or_update_quests}"></a>
-			</h3>
-			<h3>
-				<a th:href="@{/lecture/add}" th:text="#{create_or_update_lectures}"></a>
-			</h3>
-		</sec:authorize>
+		<h3 sec:authorize="hasRole('ROLE_ADMIN') or hasRole('ROLE_TUTOR')">
+			<a th:href="@{/quest/add}" th:text="#{create_or_update_quests}"></a>
+		</h3>
+		<h3 sec:authorize="hasRole('ROLE_ADMIN') or hasRole('ROLE_TUTOR')">
+			<a th:href="@{/lecture/add}" th:text="#{create_or_update_lectures}"></a>
+		</h3>
 	</div>
 </body>
 </html>
