--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -56,6 +56,8 @@
 							<li sec:authorize="isAnonymous()"><a
 								th:href="@{/user/register}" href="register"
 								th:text="#{register}"></a></li>
+							<li sec:authorize="isAnonymous()"><a th:href="@{/login}"
+								href="login" th:text="#{login}"></a></li>
 						</ul></li>
 					<li sec:authorize="isAuthenticated()"><a th:href="@{/logout}"
 						href="logout"><i class="icon-chevron-left"></i><span
