--- a/src/main/resources/templates/quiz/question.html
+++ b/src/main/resources/templates/quiz/question.html
@@ -39,10 +39,10 @@
 								th:for="${answerStat.index}" th:text="${answer.value}"></label>
 						</div>
 						<div class="radio" th:unless="${isMultipleAnswer}">
-							<input th:id="${answerStat.index}" type="radio"
-								th:value="${answerStat.index} == 1"
+							<input type="radio" th:value="${answerStat.index} == 1"
 								th:field="*{answers[__${answerStat.index}__].state}" /> <label
-								th:for="${answerStat.index}" th:text="${answer.value}"></label>
+								th:for="${#ids.prev('answers[__${answerStat.index}__].state')}"
+								th:text="${answer.value}"></label>
 						</div>
 					</div>
 					<div>
