--- a/src/main/resources/templates/quiz/question.html
+++ b/src/main/resources/templates/quiz/question.html
@@ -40,7 +40,7 @@
 						</div>
 						<div class="radio" th:unless="${isMultipleAnswer}">
 							<input id="${answerStat.index}" type="radio"
-								th:value="${answerStat.index} != 0"
+								th:value="*{answers[__${answerStat.index}__].state}"
 								th:field="*{answers[__${answerStat.index}__].state}" /> <label
 								th:for="${answerStat.index}" th:text="${answer.value}"></label>
 						</div>
