--- a/src/main/resources/templates/quiz/question.html
+++ b/src/main/resources/templates/quiz/question.html
@@ -40,8 +40,7 @@
 						</div>
 						<div class="radio" th:unless="${isMultipleAnswer}">
 							<input id="${answerStat.index}" type="radio"
-								th:value="not *{answers[__${answerStat.index}__].state}"
-								th:field="*{answers[__${answerStat.index}__].state}" /> <label
+								th:value="not *{answers[__${answerStat.index}__].state}" /> <label
 								th:for="${answerStat.index}" th:text="${answer.value}"></label>
 						</div>
 					</div>
