--- a/src/main/resources/templates/quiz/question.html
+++ b/src/main/resources/templates/quiz/question.html
@@ -41,8 +41,8 @@
 						<div class="radio" th:unless="${isMultipleAnswer}">
 							<label><input id="${answerStat.index}" type="radio"
 								name="group"
-								th:value="not *{answers[__${answerStat.index}__].state}" /> <output
-									th:text="${answer.value}"></output></label>
+								th:value="not *{answers[__${answerStat.index}__].state}" /> <span
+								th:text="${answer.value}"></span></label>
 						</div>
 					</div>
 					<div>
