--- a/src/main/resources/templates/quiz/question.html
+++ b/src/main/resources/templates/quiz/question.html
@@ -29,7 +29,7 @@
 				<script type="text/javascript" th:inline="javascript">
 				/*<![CDATA[*/
 				
-				$("#question").html([[${question.value}]]);
+				$("#question").html([[${question}]]);
 			
 				/*]]>*/
 				</script>
