--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -16,6 +16,31 @@
 		<h3 sec:authorize="hasRole('ROLE_ADMIN') or hasRole('ROLE_TUTOR')">
 			<a th:href="@{/lecture/add}" th:text="#{create_or_update_lectures}"></a>
 		</h3>
+		<div class="row">
+			<div class="col-md-4 col-md-offset-3">
+				<form th:action="@{/search}" class="search-form">
+					<div class="form-group has-feedback">
+						<label for="search" class="sr-only" th:text="#{search}"></label> <input
+							type="text" class="form-control" name="search" id="search"
+							placeholder="search"> <span
+							class="glyphicon glyphicon-search form-control-feedback"></span>
+						<script type="text/javascript" th:inline="javascript">
+							/*<![CDATA[*/
+
+							$('input').focusin(function() {
+								$('.has-feedback').addClass("showClass");
+							});
+
+							$('input').focusout(function() {
+								$('.has-feedback').removeClass("showClass");
+							});
+
+							/*]]>*/
+						</script>
+					</div>
+				</form>
+			</div>
+		</div>
 	</div>
 </body>
 </html>
