--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -22,7 +22,7 @@
 					<div class="form-group has-feedback">
 						<label for="search" class="sr-only" th:text="#{search}"></label> <input
 							type="text" class="form-control" name="search" id="search"
-							placeholder="search"> <span
+							placeholder="search"></input> <span
 							class="glyphicon glyphicon-search form-control-feedback"></span>
 						<script type="text/javascript" th:inline="javascript">
 							/*<![CDATA[*/
