--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -23,7 +23,7 @@
 						</h3>
 						<label for="search" class="sr-only" th:text="#{search}"></label> <input
 							type="text" class="form-control" name="search" id="search"
-							th:placeholder="#{search}" th:></input> <span
+							th:placeholder="#{search}" th:field="${searchQuery}"></input> <span
 							class="glyphicon glyphicon-search form-control-feedback"></span>
 						<script type="text/javascript" th:inline="javascript">
 							/*<![CDATA[*/
