--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -12,7 +12,7 @@
 		<div class="row">
 			<div class="col-md-4 col-md-offset-3">
 				<form th:action="@{/search}" class="search-form">
-					<div class="form-group has-feedback">
+					<div class="form-group showClass">
 						<h1 th:text="#{welcome}"></h1>
 						<h3 sec:authorize="hasRole('ROLE_ADMIN') or hasRole('ROLE_TUTOR')">
 							<a th:href="@{/quest/add}" th:text="#{create_or_update_quests}"></a>
@@ -21,6 +21,8 @@
 							<a th:href="@{/lecture/add}"
 								th:text="#{create_or_update_lectures}"></a>
 						</h3>
+					</div>
+					<div class="form-group has-feedback">
 						<label for="search" class="sr-only" th:text="#{search}"></label> <input
 							type="text" class="form-control" name="search" id="search"
 							th:placeholder="#{search}" th:field="${searchQuery}"></input> <span
