--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -25,7 +25,8 @@
 						th:text="#{quests}"></a></li>
 					<li><a th:href="@{/tutorial/lectures}"
 						href="/tutorial/lectures" th:text="#{lectures}"></a></li>
-					<li><a th:href="@{/search}" href="/search" th:text="#{search}"></a></li>
+					<li><a th:href="@{/search}" href="/search"><span
+							class="glyphicon glyphicon-search"></span></a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li class="dropdown"><a class="dropdown-toggle"
