--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -25,8 +25,16 @@
 						th:text="#{quests}"></a></li>
 					<li><a th:href="@{/tutorial/lectures}"
 						href="/tutorial/lectures" th:text="#{lectures}"></a></li>
-					<li><a th:href="@{/search}" href="/search"><span
-							class="glyphicon glyphicon-search"></span></a></li>
+					<li><div id="custom-search-input">
+							<div class="input-group col-md-12">
+								<input type="text" class="form-control input-lg"
+									th:placeholder="#{search}" /> <span class="input-group-btn">
+									<button class="btn btn-info btn-lg" type="button">
+										<i class="glyphicon glyphicon-search"></i>
+									</button>
+								</span>
+							</div>
+						</div></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li class="dropdown"><a class="dropdown-toggle"
