--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -25,15 +25,15 @@
 						th:text="#{quests}"></a></li>
 					<li><a th:href="@{/tutorial/lectures}"
 						href="/tutorial/lectures" th:text="#{lectures}"></a></li>
-					<li><div id="custom-search-input">
-							<div class="input-group col-md-12">
-								<input type="text" class="form-control input-lg"
+					<li th:if="${query} == null"><div id="custom-search-input">
+							<form th:action="@{/search}" class="input-group" method="post">
+								<input type="text" class="form-control" name="query"
 									th:placeholder="#{search}" /> <span class="input-group-btn">
-									<button class="btn btn-info btn-lg" type="button">
+									<button class="btn btn-info" type="submit">
 										<i class="glyphicon glyphicon-search"></i>
 									</button>
 								</span>
-							</div>
+							</form>
 						</div></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
