--- a/src/main/resources/templates/quiz/quests.html
+++ b/src/main/resources/templates/quiz/quests.html
@@ -9,7 +9,7 @@
 <body>
 	<div layout:fragment="content" class="container">
 		<div class="container" th:unless="${#lists.isEmpty(quests)}">
-			<h2>Quizzes</h2>
+			<h2 th:text="#{quests}"></h2>
 			<table class="table table-striped table-condensed">
 				<thead>
 					<tr>
