--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -8,6 +8,54 @@
 <title th:text="#{search}"></title>
 </head>
 <body>
-	<div layout:fragment="content"></div>
+	<div layout:fragment="content">
+		<div id="custom-search-input">
+			<form th:action="@{/search}" class="input-group" method="post">
+				<input type="text" class="form-control" name="query"
+					th:value="${query}" th:placeholder="#{search}" /> <span
+					class="input-group-btn">
+					<button class="btn btn-info" type="submit">
+						<i class="glyphicon glyphicon-search"></i>
+					</button>
+				</span>
+			</form>
+		</div>
+		<div class="container" th:unless="${#lists.isEmpty(quests)}">
+			<h2 th:text="#{quests}"></h2>
+			<table class="table table-striped table-condensed">
+				<thead>
+					<tr>
+						<th th:text="#{name}"></th>
+						<th th:text="#{description}"></th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr th:each="quest : ${quests}">
+						<td><a th:text="${quest.name}"
+							th:href="@{'/quiz/' + ${quest.id} + '/question/0'}"></a></td>
+						<td th:text="${quest.description}"></td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+		<div class="container" th:unless="${#lists.isEmpty(lectures)}">
+			<h2 th:text="#{lectures}"></h2>
+			<table class="table table-striped table-condensed">
+				<thead>
+					<tr>
+						<th th:text="#{name}"></th>
+						<th th:text="#{description}"></th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr th:each="lecture : ${lectures}">
+						<td><a th:text="${lecture.name}"
+							th:href="@{'/tutorial/' + ${lecture.id}}"></a></td>
+						<td th:text="${lecture.description}"></td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+	</div>
 </body>
 </html>
