--- a/src/main/resources/templates/admin/answers.html
+++ b/src/main/resources/templates/admin/answers.html
@@ -3,7 +3,7 @@
 	xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
 	layout:decorator="layout">
 <head>
-<title>Answers</title>
+<title th:text="#{answers}"></title>
 <meta charset="UTF-8" />
 </head>
 <body>
