--- a/src/main/resources/templates/fragments/headerinc.html
+++ b/src/main/resources/templates/fragments/headerinc.html
@@ -6,6 +6,7 @@
 <meta name="apple-mobile-web-app-capable" content="yes" />
 
 <link href="/css/styles.css" th:href="@{/css/styles.css}" rel="stylesheet" />
+<link href="/css/forum.css" th:href="@{/css/forum.css}" rel="stylesheet" />
 <link href="/webjars/bootstrap/3.3.6/css/bootstrap.min.css" th:href="@{/webjars/bootstrap/3.3.6/css/bootstrap.min.css}" media="screen" rel="stylesheet" />
 <script src="/webjars/jquery/1.12.4/jquery.min.js" th:src="@{/webjars/jquery/1.12.4/jquery.min.js}"></script>
 <script src="/webjars/bootstrap/3.3.6/js/bootstrap.min.js" th:src="@{/webjars/bootstrap/3.3.6/js/bootstrap.min.js}"></script>
