--- a/src/main/resources/templates/forum/index.html
+++ b/src/main/resources/templates/forum/index.html
@@ -13,6 +13,17 @@
 				<a type="submit" class="btn btn-default"
 					th:text="#{new_forum_question}" href="forum/question/new"></a>
 			</div>
+			<div id="custom-search-input" class="question-summary">
+				<form th:action="@{/forum}" class="input-group" method="post">
+					<input type="text" class="form-control" name="query"
+						th:value="${query}" th:placeholder="#{search}" /> <span
+						class="input-group-btn">
+						<button class="btn btn-info" type="submit">
+							<i class="glyphicon glyphicon-search"></i>
+						</button>
+					</span>
+				</form>
+			</div>
 			<div th:unless="${#lists.isEmpty(questions)}"
 				th:each="question : ${questions}" class="question-summary narrow">
 				<div th:if="${question.closed}" class="status answered">
