--- a/src/main/resources/templates/quiz/quests.html
+++ b/src/main/resources/templates/quiz/quests.html
@@ -8,6 +8,17 @@
 </head>
 <body>
 	<div layout:fragment="content" class="container">
+		<div id="custom-search-input">
+			<form th:action="@{/quiz/quests}" class="input-group" method="post">
+				<input type="text" class="form-control" name="query"
+					th:value="${query}" th:placeholder="#{search}" /> <span
+					class="input-group-btn">
+					<button class="btn btn-info" type="submit">
+						<i class="glyphicon glyphicon-search"></i>
+					</button>
+				</span>
+			</form>
+		</div>
 		<div class="container" th:unless="${#lists.isEmpty(quests)}">
 			<h2 th:text="#{quests}"></h2>
 			<table class="table table-striped table-condensed">
